--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -4,3 +4,7 @@ POSTGRES_PASSWORD="pwd"
 POSTGRES_DB="users_db"
 POSTGRES_DB="incidents_db"
 POSTGRES_DB="resources_db"
+
+# Node vars
+SESSION_SECRET="super duper secret!"
+API_KEY="<TODO:Replace API key>"
