added /register positive and negative test cases

--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -20,7 +20,7 @@
     },
     "scripts": {
       "prestart": "npm install",
-      "start": "nodemon index.js",
+      "start": "nodemon -L index.js",
       "test": "mocha",
       "testandrun": "npm run prestart && npm run test && npm start"
     }
