--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
       - '3000:3000'
     volumes:
       - ./:/repository
-    command: 'npm start' #TODO: change the command to `npm run testandrun` to run mocha
+    command: 'npm start'
+    # command: 'npm run testandrun'
 volumes:
   group-project:
