Added map page and started resource page

--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -1,9 +1,7 @@
 # database credentials
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="pwd"
-POSTGRES_DB="users_db"
-POSTGRES_DB="incidents_db"
-POSTGRES_DB="resources_db"
+POSTGRES_DB="disaster_db"
 
 # Node vars
 SESSION_SECRET="super duper secret!"
