--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - '3000:3000'
     volumes:
       - ./:/repository
-    command: 'npm start'
-    # command: 'npm run testandrun'
+    # command: 'npm start'
+    command: 'npm run testandrun'
 volumes:
   group-project:
