Everything good and ready except for silly API Key thing

--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -7,4 +7,4 @@ POSTGRES_DB="resources_db"
 
 # Node vars
 SESSION_SECRET="super duper secret!"
-API_KEY="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuAu9ExnoZHAZVIXDyCZcvhx8L95KH3Cs&callback=initMap"
+API_KEY="AIzaSyAuAu9ExnoZHAZVIXDyCZcvhx8L95KH3Cs"
