--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -1,7 +1,9 @@
 # database credentials
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="pwd"
-POSTGRES_DB="disaster_db"
+POSTGRES_DB="users__db"
+POSTGRES_DB="incidents_db"
+POSTGRES_DB="resources_db"
 
 # Node vars
 SESSION_SECRET="super duper secret!"
