fixed home button page references

--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -2,7 +2,7 @@
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="pwd"
 POSTGRES_DB="users__db"
-POSTGRES_DB="incidents_db"
+POSTGRES_DB="incident_reports_db"
 POSTGRES_DB="resources_db"
 
 # Node vars
